--- a/estilos.css
+++ b/estilos.css
@@ -43,3 +43,15 @@ input[type="checkbox"]:focus {
 .banners-titulo {
   --bs-bg-opacity: .2;
 }
+
+.botao-marrom {
+  background-color: #B29463;
+}
+
+.botao-padrao {
+  background-color: var(--marrom-claro);
+}
+
+.botao-padrao:hover {
+  background-color: var(--marrom-escuro);
+}
