--- a/estilos.css
+++ b/estilos.css
@@ -3,7 +3,6 @@ body {
   --marrom-escuro: #816D4F;
   --marrom-claro: #B29463;
   font-family: 'Barlow', sans-serif;
-  height: 4000px;
 }
 
 input[type=checkbox] {
@@ -55,4 +54,8 @@ input[type="checkbox"]:focus {
 
 .botao-padrao:hover {
   background-color: var(--marrom-escuro);
+}
+
+.input-range::-webkit-slider-thumb {
+  background-color: var(--marrom-claro);
 }
