aplicando modo noturno

--- a/estilos.css
+++ b/estilos.css
@@ -63,3 +63,13 @@ input[type="checkbox"]:focus {
 .fundo-marrom {
   background-color: var(--marrom-claro);
 }
+
+[data-bs-theme="dark"] {
+  color: white;
+  .nav-link, .card-body, .offcanvas, .accordion, .btn, .botao-padrao {
+    --bs-nav-link-color: white;
+    --bs-card-color: white;
+    --bs-offcanvas-color: white;
+    --bs-body-color: white;
+  }
+}
